--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -42,6 +42,11 @@
       <artifactId>jsr305</artifactId>
       <version>3.0.1</version>
     </dependency>
+    <dependency>
+        <groupId>io.vavr</groupId>
+        <artifactId>vavr</artifactId>
+        <version>0.9.0</version>
+    </dependency>
 
     <!--test deps-->
     <dependency>
